# middlerim-queue

./: .gitignore  Cargo.toml  README.md  middlerim-reader.toml
jni/: Cargo.toml  build.sh  io_middlerim_queue_Reader.h  io_middlerim_queue_Writer.h  run_example.sh
jni/driver/: build.gradle  io_middlerim_queue_Reader.h  io_middlerim_queue_Writer.h  settings.gradle
jni/driver/src/main/java/io/middlerim/queue/: Example.java  Reader.java  Writer.java
jni/driver/src/test/java/io/middlerim/queue/: SharedMemoryQueueTest.java
jni/java/io/middlerim/queue/: Example.java  Reader.java  Writer.java
jni/src/: lib.rs
reader/: Cargo.toml
reader/src/: main.rs
reader_bench/: Cargo.toml
reader_bench/src/: main.rs
shmem/: Cargo.toml
shmem/src/: errors.rs  lib.rs
shmem/src/core/: mod.rs
shmem/src/reader/: mod.rs
shmem/src/replica/: core.rs  mod.rs  stub.rs
shmem/src/tests/: mod.rs  torn_read_tests.rs
shmem/src/writer/: mod.rs
test/: Cargo.toml  main.rs  run_benches.rs
writer/: Cargo.toml
writer/src/: main.rs
writer_bench/: Cargo.toml
writer_bench/src/: main.rs
