[package]
name = "middlerimq"
version = "0.1.0"
authors = [
  "sndyuk <sanada@sndyuk.com>",
]
edition = "2018"

[dependencies]
confy = "0"
jni = "0"
shmem = { version = "0.1.0", path = "../shmem" }
toml = "0.8" # Added for direct TOML parsing
serde = { version = "1.0", features = ["derive"] } # Added for JniTomlConfig

[lib]
crate_type = ["cdylib"]
